fixing x overflowing

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,10 @@
     @apply bg-off-white text-dark-gray;
   }
 }
+html,
+body {
+  overflow-x: hidden;
+}
 
 @layer utilities {
   .text-balance {
